// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionButton renders label and value 1`] = `
<button
  className="MuiButtonBase-root-31 MuiButton-root-5 MuiButton-contained-16 MuiButton-raised-19 ActionButton-raised-1"
  disabled={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-6 ActionButton-label-2"
  >
    <span
      className="MuiTypography-root-34 MuiTypography-button-45 ActionButton-caption-3"
    >
      Label
    </span>
    <span
      className="MuiTypography-root-34 MuiTypography-caption-44 ActionButton-value-4"
    >
      Value
    </span>
  </span>
  <span
    className="MuiTouchRipple-root-69"
  />
</button>
`;

exports[`ActionButton renders with no props 1`] = `
<button
  className="MuiButtonBase-root-31 MuiButton-root-5 MuiButton-contained-16 MuiButton-raised-19 ActionButton-raised-1"
  disabled={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-6 ActionButton-label-2"
  >
    <span
      className="MuiTypography-root-34 MuiTypography-button-45 ActionButton-caption-3"
    />
    <span
      className="MuiTypography-root-34 MuiTypography-caption-44 ActionButton-value-4"
    />
  </span>
  <span
    className="MuiTouchRipple-root-69"
  />
</button>
`;
